sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: '(' expected but identifier found.
  for i <- 0 to 9 {
      ^AlgBubbleSort1:8: error: illegal start of simple expression
} 
^